crates/sui-core/src/unit_tests/snapshots/sui_core__authority__gas_diff_tests__diff_happy_success_multi_coin.snap
---
source: crates/sui-core/src/unit_tests/gas_diff_tests.rs
expression: out
---
status: Success
computation_cost: 1000000
storage_cost: 2622000
storage_rebate: 4890600
non_refundable_storage_fee: 49400
gas_object_balance_change: 8001268600
mutated_count: 1
created_count: 1
deleted_count: 4
