crates/sui-core/src/unit_tests/snapshots/sui_core__authority__gas_diff_tests__diff_oog_computation_storage_ok_multi.snap
---
source: crates/sui-core/src/unit_tests/gas_diff_tests.rs
expression: out
---
status: Failure(InsufficientGas, command=0)
computation_cost: 5000000000
storage_cost: 988000
storage_rebate: 4890600
non_refundable_storage_fee: 49400
gas_object_balance_change: 39995003902600
mutated_count: 1
created_count: 0
deleted_count: 4
